--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-common",
+  "name": "react-native-general-calendars",
   "version": "1.0.0",
-  "description": "React Native common components",
+  "description": "React Native Calendar Components",
   "main": "src/index.js",
   "scripts": {
     "start": "watchman watch-del-all && react-native start",
