--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-general-calendars",
-  "version": "1.0.4",
-  "description": "React Native Calendar Components With support of Gregorian & Jalaali",
+  "version": "1.0.5",
+  "description": "React Native Calendar Components with support of Gregorian & Jalaali Calendars",
   "main": "src/index.js",
   "scripts": {
     "start": "watchman watch-del-all && react-native start",
