--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-general-calendars",
-  "version": "1.3.0",
-  "description": "React Native Calendar Components with support of Gregorian & Jalaali Calendars",
+  "version": "1.4.0",
+  "description": "React Native Calendar Components with support of Gregorian & Jalaali (Persian) Calendars",
   "main": "src/index.js",
   "scripts": {
     "start": "watchman watch-del-all && react-native start",
@@ -37,14 +37,13 @@
     "email": "r.ghorbani.f@gmail.com"
   },
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/rghorbani/react-native-general-calendars/issues"
-  },
   "dependencies": {
-    "moment": "^2.22.0",
+    "lodash.get": "^4.4.2",
+    "lodash.isequal": "^4.5.0",
+    "moment": "^2.22.1",
     "moment-jalaali": "^0.7.2",
     "prop-types": "~15.6.1",
-    "react-native-common": "^1.2.2"
+    "react-native-common": "^1.4.0"
   },
   "devDependencies": {
     "babel-cli": "~6.26.0",
@@ -70,6 +69,9 @@
     ]
   },
   "homepage": "https://github.com/rghorbani/react-native-general-calendars",
+  "bugs": {
+    "url": "https://github.com/rghorbani/react-native-general-calendars/issues"
+  },
   "contributors": [
     {
       "name": "rghorbani",
