--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-general-calendars",
-  "version": "1.4.1",
-  "description": "React Native Calendar Components with support of Gregorian & Jalaali (Persian) Calendars",
+  "version": "1.5.0",
+  "description": "React Native Calendar Components with support of Gregorian & Jalaali (Shamsi, Persian) Calendars",
   "main": "src/index.js",
   "scripts": {
     "start": "watchman watch-del-all && react-native start",
@@ -28,6 +28,7 @@
     "jalaali",
     "hijri",
     "persian",
+    "shamsi",
     "ios",
     "android",
     "windows"
@@ -43,7 +44,7 @@
     "moment": "^2.22.1",
     "moment-jalaali": "^0.7.2",
     "prop-types": "~15.6.1",
-    "react-native-common": "^1.4.0"
+    "react-native-common": "^1.7.1"
   },
   "devDependencies": {
     "babel-cli": "~6.26.0",
