--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-general-calendars",
-  "version": "1.7.2",
+  "version": "1.7.3",
   "description": "React Native Calendar Components with support of Gregorian & Jalaali (Shamsi, Persian) Calendars",
   "main": "src/index.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "react-native-general-calendars",
     "moment-jalaali",
     "moment",
+    "calendar",
     "calendars",
     "calendar-list",
     "agenda",
