--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-general-calendars",
-  "version": "1.8.1",
+  "version": "1.8.2",
   "description": "React Native Calendar Components with support of Gregorian & Jalaali (Shamsi, Persian) Calendars",
   "main": "src/index.js",
   "scripts": {
@@ -44,8 +44,8 @@
   "dependencies": {
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
-    "moment": "^2.22.2",
-    "moment-jalaali": "^0.7.4",
+    "moment": "~2.22.2",
+    "moment-jalaali": "~0.7.4",
     "prop-types": "~15.6.2",
     "react-native-common": "^1.12.1"
   },
