--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
   "dependencies": {
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
-    "moment": "~2.22.2",
-    "moment-jalaali": "~0.7.4",
+    "moment": "^2.22.2",
+    "moment-jalaali": "^0.8.3",
     "prop-types": "~15.6.2",
     "react-native-common": "^1.12.1"
   },
