--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "eslint-plugin-react": "~7.11.1",
     "eslint-plugin-react-native": "~3.3.0",
     "jest": "~23.6.0",
-    "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react": "16.6.0-alpha.8af6728",
+    "react-native": "0.57.4"
   },
   "peerDependencies": {
     "react": "*",
