--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "react-native run-ios --simulator=\"iPhone 8\"",
     "android": "react-native run-android",
     "pretest": "npm run lint",
-    "lint": "eslint src -c .eslintrc",
+    "lint": "eslint .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
@@ -56,6 +56,7 @@
     "babel-preset-react": "~6.24.1",
     "babel-preset-react-native": "~4.0.0",
     "eslint": "~5.6.0",
+    "eslint-config-kajoo": "^1.1.0",
     "eslint-plugin-react": "~7.11.1",
     "eslint-plugin-react-native": "~3.3.0",
     "jest": "~23.6.0",
