--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-general-calendars",
-  "version": "1.9.1",
+  "version": "1.10.0",
   "description": "React Native Calendar Components with support of Gregorian & Jalaali (Shamsi, Persian) Calendars",
   "main": "src/index.js",
   "scripts": {
@@ -41,12 +41,19 @@
     "email": "r.ghorbani.f@gmail.com"
   },
   "license": "MIT",
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
   "dependencies": {
+    "lodash": "^4.17.11",
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.24.0",
     "moment-jalaali": "^0.8.3",
-    "prop-types": "~15.6.2",
+    "prop-types": "^15.6.2",
     "react-native-common": "^1.12.1"
   },
   "devDependencies": {
@@ -59,7 +66,9 @@
     "eslint-config-kajoo": "^1.1.0",
     "eslint-plugin-react": "~7.11.1",
     "eslint-plugin-react-native": "~3.3.0",
+    "husky": "^1.3.1",
     "jest": "~23.6.0",
+    "lint-staged": "^8.1.5",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4"
   },
