fixed lint process

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   "jest": {
     "preset": "react-native",
     "testPathIgnorePatterns": [
+      "example/",
       "/node_modules/"
     ]
   },
