--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-general-calendars",
-  "version": "1.10.1",
+  "version": "1.10.2",
   "description": "React Native Calendar Components with support of Gregorian & Jalaali (Shamsi, Persian) Calendars",
   "main": "src/index.js",
   "scripts": {
@@ -48,26 +48,26 @@
     ]
   },
   "dependencies": {
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.24.0",
     "moment-jalaali": "^0.8.3",
     "prop-types": "^15.7.2",
-    "react-native-common": "^1.12.1"
+    "react-native-common": "^3.0.1"
   },
   "devDependencies": {
-    "babel-cli": "~6.26.0",
-    "babel-jest": "~23.6.0",
-    "babel-preset-react": "~6.24.1",
-    "babel-preset-react-native": "~4.0.0",
-    "eslint": "~5.6.0",
-    "eslint-config-kajoo": "^1.1.0",
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^23.6.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-native": "^4.0.1",
+    "eslint": "^6.0.0",
+    "eslint-config-kajoo": "^1.5.0",
     "husky": "^1.3.1",
-    "jest": "~23.6.0",
+    "jest": "^23.6.0",
     "lint-staged": "^8.1.5",
-    "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.4"
+    "react": "16.6.3",
+    "react-native": "0.57.8"
   },
   "peerDependencies": {
     "react": "*",
